# desktop-pet

./: .gitignore  CMakeLists.txt  CMakelists.txt  Dependencies.cmake  Readme.md
.github/: copilot-instructions.md
.github/workflows/: cmake-multi-platform.yml
App/: CMakelists.txt
App/Source/: App.cpp  App.hpp  main.cpp
Core/: CMakeLists.txt  CMakelists.txt
Core/Source/: Pet.cpp  Pet.hpp  window.cpp  window.hpp
Core/Source/Include/: utils.hpp
